# resonova

./: .gitignore  README.md  _backend_wsl
backend/: .env.example  .gitignore  FRONTEND_COMPLETE_SUMMARY.md  MULTI_DEVICE_FEATURE.md  MULTI_DEVICE_MQTT_SIMULATION_FINAL.md  QUICKSTART.md  SYMLINK_ARCHITECTURE.md  TTS_OPTIMIZATION_SUMMARY.md  commands.yaml  env_scanner.py  grant_chatbot_remote.sql  grant_remote.sh  grant_remote_final.sql  mqtt_bridge.py  pcm_utils.py  pyproject.toml  run_figurine_audio_migration.py  run_migration.py  server.py  start_bg.bat  start_server.bat  start_server.py
backend/backend/: _sync_wsl.py  chatbot_src  command_engine.py  command_stats.py  conftest.py  mqtt_bridge.py  pcm_utils.py  pyproject.toml  server.py  sim_payload.json  start.py  tts_adapter.py  tts_types.py
backend/docs/: 13-audio-data-format-convention.md  15-production-architecture.md  16-global-assessment.md  17-command-management-loop.md  18-service-management-and-env-config.md  20-dev-environment-architecture.md  CONVERSATION_AUDIO_TRACKING.md  HOOK_IMPLEMENTATION_COMPLETE.md  HOOK_INJECTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MONITORING_CONFIG.md  MONITORING_STATUS.md  MQTT_SIMULATION.md  PRIVACY_PROTECTION.md  REAL_DIALOGUE_MODE.md
backend/scripts/: _check_mysql.py  analyze_capture.py  analyze_capture.sh  analyze_capture_out.sh  capture_topic_counts.sh  cat_analysis.sh  check_env.sh  check_full_env.sh  check_history_full.sh  check_log_size.sh  check_logs.sh  check_server_log.sh  check_simple.sh  coordinated_test3.sh  device_firmware.py  dump_watch_log.sh  ensure-venv.sh  (+31 more)
(+176 files in other folders)
