[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stt-test-tool"
version = "0.1.0"
description = "STT 测试平台 — 后端运行在 WSL，与 chatbot 同级目录"
requires-python = ">= 3.13"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "numpy>=2.0.0",
    "opuslib-next>=1.1.0",
    "paho-mqtt>=2.1.0",
    "pymysql>=1.1.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.0",
    "uvicorn>=0.34.0",
]

[tool.setuptools.packages.find]
exclude = ["frontend*", ".venv"]
